--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
                 <div class="card-img-overlay hello-world">
                     <h3 class="card-title">Nuestro Buffette</h3>
                     <p class="card-text">Last updated 3 mins ago</p>
-                    <a href="./pages/welcome.html" class="btn btn-primary">Conócenos</a>
+                    <a href="/welcome" class="btn btn-primary">Conócenos</a>
 
                 </div>
             </div>
