--- a/public/civil.html
+++ b/public/civil.html
@@ -24,13 +24,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/welcome">Conócenos</a>
-                        <a class="nav-item nav-link" href="/civil">Abogado Civil</a>
-                        <a class="nav-item nav-link" href="/familiar">Abogado Familiar</a>
-                        <a class="nav-item nav-link" href="/penal">Abogado Penalista</a>
-                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
-                        <a class="nav-item nav-link" href="/contact">Contacto</a>
-                        <a class="nav-item nav-link" href="#">Aspectos Legales/Aviso de Privacidad</a>
+                        <a class="nav-item nav-link" aria-current="page" href="/welcome">Conócenos</a>
+                        <a class="nav-item nav-link active" aria-current="page" href="/civil">Abogado Civil</a>
+                        <a class="nav-item nav-link" aria-current="page" href="/familiar">Abogado Familiar</a>
+                        <a class="nav-item nav-link" aria-current="page" href="/penal">Abogado Penalista</a>
+                        <a class="nav-item nav-link" aria-current="page" href="/publicaciones">Publicaciones</a>
+                        <a class="nav-item nav-link" aria-current="page" href="/contact">Contacto</a>
+                        <a class="nav-item nav-link" aria-current="page" href="#">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
             </div>
