--- a/public/penal.html
+++ b/public/penal.html
@@ -24,10 +24,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/welcome">Conócenos</a>
+                        <a class="nav-link" aria-current="page" href="/welcome">Conócenos</a>
                         <a class="nav-item nav-link" href="/civil">Abogado Civil</a>
                         <a class="nav-item nav-link" href="/familiar">Abogado Familiar</a>
-                        <a class="nav-item nav-link" href="/penal">Abogado Penalista</a>
+                        <a class="nav-item nav-link active" href="/penal">Abogado Penalista</a>
                         <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" href="/contact">Contacto</a>
                         <a class="nav-item nav-link" href="#">Aspectos Legales/Aviso de Privacidad</a>
