--- a/public/civil.html
+++ b/public/civil.html
@@ -14,12 +14,12 @@
     <!-- {{!-- First the headr with the navbar and all the links that guide the user through the page this one goes on the main
         handlebar because is going to be used for the whole app --}} -->
     <header>
+
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/home">Iglesias y Abogados</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -30,7 +30,8 @@
                         <a class="nav-item nav-link" aria-current="page" href="/penal">Abogado Penalista</a>
                         <a class="nav-item nav-link" aria-current="page" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" aria-current="page" href="/contact">Contacto</a>
-                        <a class="nav-item nav-link" aria-current="page" href="#">Aspectos Legales/Aviso de Privacidad</a>
+                        <a class="nav-item nav-link" aria-current="page" href="#">Aspectos Legales/Aviso de
+                            Privacidad</a>
                     </div>
                 </div>
             </div>
@@ -173,6 +174,12 @@
         <!-- {{!-- Make a section for the legal advise --}} -->
         <section class="footer-legal-advise"></section>
     </footer>
+
 </body>
+
+<!-- Links to bootstrap scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </html>
