--- a/public/familiar.html
+++ b/public/familiar.html
@@ -17,9 +17,8 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/home">Iglesias y Abogados</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -77,7 +76,7 @@
 
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
+                    <div class="card mb-3" style="background-color: #C3CEDA;">
                         <img src="https://cdn.pixabay.com/photo/2017/06/20/22/14/man-2425121_1280.jpg"
                             class="img-fluid card-img-top" alt="couple-img">
                         <div class="card-body">
@@ -175,5 +174,10 @@
         <section class="footer-legal-advise"></section>
     </footer>
 </body>
+
+<!-- Links to bootstrap scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </html>
