--- a/public/penal.html
+++ b/public/penal.html
@@ -17,9 +17,8 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/home">Iglesias y Abogados</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -42,7 +41,7 @@
 
     <main class="ml-3 mr-3 penal-main-section">
         <section class="first-main-section">
-            <div class="first-header">
+            <div class="container-fluid first-header">
                 <h5 class="text-center">Área Penal</h5>
                 <p class="text-center fist-paragraph">
                     En el área de derecho penal nos especializamos en diferentes ramas
@@ -53,7 +52,7 @@
 
         <section class="second-main-section">
             <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
+                <div class="col mb-3">
                     <div class="card" style="background-color: #c3ceda;">
                         <img src="https://cdn.pixabay.com/photo/2014/12/02/11/21/prison-553836_1280.jpg"
                             class="card-img-top" alt="jail-img" />
@@ -174,5 +173,10 @@
         <section class="footer-legal-advise"></section>
     </footer>
 </body>
+
+<!-- Links to bootstrap scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 </html>
