--- a/public/advise.html
+++ b/public/advise.html
@@ -92,31 +92,23 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <div class="row g-0">
-                    <div class="col-md-6">
+                <h2 class="text-left mx-3">Contacto</h2>
+                <div class="row g-0 ">
+                    <div class="col-md-6 ">
                         <div class="card-body">
-                            <h2 class="card-title">Contacto</h2>
                             <p class="card-text text-footer">Teléfono.</p>
                             <p class="card-text text-footer">Email.</p>
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
-                            <p class="card-text text-footer">
-                                <small class="text-muted">Text here.</small>
-                            </p>
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3763.1626128008297!2d-99.27490048533694!3d19.405378746579604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d2014968c1ac8b%3A0x29c2c94ffcc7360a!2sMagnocentro%20Centro%20Comercial!5e0!3m2!1ses-419!2smx!4v1625462459148!5m2!1ses-419!2smx"
-                            width="100%" height="100%" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
+                        <div class="card-body">
+                            <p class="card-text text-footer">Dirección.</p>
+                            <p class="card-text text-footer">Nombre</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- {{!-- Make a section for the legal advise --}} -->
-        <section class="footer-legal-advise"></section>
-
     </footer>
 
 </body>
