--- a/public/civil.html
+++ b/public/civil.html
@@ -17,21 +17,21 @@
 
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/home">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="/">Iglesias y Abogados</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" aria-current="page" href="/welcome">Conócenos</a>
-                        <a class="nav-item nav-link active" aria-current="page" href="/civil">Abogado Civil</a>
-                        <a class="nav-item nav-link" aria-current="page" href="/familiar">Abogado Familiar</a>
-                        <a class="nav-item nav-link" aria-current="page" href="/penal">Abogado Penalista</a>
-                        <a class="nav-item nav-link" aria-current="page" href="/publicaciones">Publicaciones</a>
-                        <a class="nav-item nav-link" aria-current="page" href="/contact">Contacto</a>
-                        <a class="nav-item nav-link" aria-current="page" href="/advise">Aspectos Legales/Aviso de
-                            Privacidad</a>
+                        <a class="nav-link active" aria-current="page" href="/conócenos">Conócenos</a>
+                        <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
+                        <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
+                        <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
+                        <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
+                        <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
+                        <a class="nav-item nav-link" href="/contact">Contacto</a>
+                        <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
                 </div>
             </div>
